--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}!
+    Hello to {{ title }}!
   </h1>
+  <nav>
+      <a routerLink="/login">Login</a>
+    </nav>
   <span>{{ example }}</span>
  
 </div>
@@ -10,13 +13,40 @@
 <div *ngIf="error">{{error}}</div>
 <div *ngIf="success">{{success}}</div>
     
-<div id="theList">
+<!--<div id="theList">
   <h2 style="text-align:center">The list</h2>
   <ul>
     <li *ngFor="let item of languages">{{item.name}} | {{item.details}} </li>
   </ul>
+</div>-->
+<div id="theList">
+  <h2>The Language list</h2>
+
+  <div class="list-group">
+    <div *ngFor="let item of languages;let i = index;" class="list-group-item ">
+      <div class="row">
+      <div class="col-md-4">
+        <input type="text" [(ngModel)]="languages[i].name" class="form-control" required pattern="^[a-zA-Z]+$" #name="ngModel"
+               [ngClass]="{ 'is-invalid': name.touched && name.invalid }">
+      </div>
+      <div class="col-md-6">
+        <input type="text" [(ngModel)]="languages[i].details" class="form-control" required  #details="ngModel"
+               [ngClass]="{ 'is-invalid': details.touched && details.invalid }">
+      </div>
+      <div class="col-md-2">
+        <input type="button" value="Update" class="btn btn-success btn-sm" [disabled]="name.invalid || details.invalid"
+               (click)="updateLanguage(name, details, item.id)">
+               <input type="button"
+               value="Delete"
+               class="btn btn-danger btn-sm"
+               (click)="deleteLanguage(item.id)" >
+      </div>
+    </div>
+    </div>
+  </div>
 </div>
 
+<!-- the form -->
 <div id="theForm">
   <h2>The form</h2>
   <form #f="ngForm" name="theForm" (submit)="addLanguage(f)"  style="padding: 0px 50% 0px 10px;">
@@ -26,7 +56,7 @@
       <span class="help-block danger" *ngIf="languageName.errors?.required && languageName.touched">
         The name is required
       </span>
-      <span class="help-block danger" *ngIf="languageName.errors?.pattern && languageName.touched">
+      <span class="help-block danger" *ngIf="languageName.errors?.pattern && languageName.touched" >
         The name can only contain the letters a-z or A-Z
       </span>
     </div>
